# ai_tools

./: .gitignore  Makefile  README.md  pyproject.toml
ai_bench/: README.md  manifest.json
ai_bench/scripts/: fetch-svgrepo-icon.sh
ai_bench/src/: background.js  colors.js  labels.js  options.css  options.html  options.js  panel.css  panel.html  panel.js  parse.js  sparkline.js
gitingester/: context.md  main.py  readme.md
